2005-03-06  Inge Wallin  <inge@lysator.liu.se>

	Begin to support the Apply button in the data editor.
	* kchartDataEditor.cc (kchartDataEditor): connect applyClicked()
	to apply()
	* kchartDataEditor.{h,cc} (apply): new method.

2005-03-05  Inge Wallin  <inge@lysator.liu.se>

	Ego stroking:
	* kchart_aboutdata.h (newKChartAboutData): Add Inge Wallin as an
	author.

	Continue with the new data editor.
	* kchartDataEditor.cc (setLegend): Always initialize the row
	headers, not only the first time.
	
	Start fixing default handling in the config dialog.
	* kchartConfigDialog.cc (defaults): Call datapage->defaults()
	instead of init.
	* kchartDataConfigPage.{h,cc} (defaults): New method.

	Cleaning
	* kcartDataEditor.{h,cc}: make all members follow the m_
	convention.
	
2005-03-03  Inge Wallin  <inge@lysator.liu.se>

	Start on bug 90892 - "Data editor looks bad", and bug 90878 -
	"KChart: Crash when creating more than 16 rows or columns".
	* kchartDataEditor.{h,cc}: First prototype of a new data editor.

	Code cleaning.
	* kchartFontConfigPage.cc (class KChartFontListBoxItem): Move from
	kchartDataConfigPage.h.  That used to be an error.

2005-02-25  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 99998: KChart: 3d Depth parameter has ludicrous max value
	* kchartParameter3dConfigPage.cc (KChartParameter3dConfigPage):
	Make the depth parameter go from 0 to 2.0 instead of 0 to 40.

2005-02-24  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 99390: The background settings in the config dialog don't
	work.
	* kchartBackgroundPixmapConfigPage.{h,cc}: Remove the big unused
	list to the left of the page.

	Fix bug 99999: KChart: The wizard has settings for non-existent
	parameters.
	* kchartWizardLabelsLegendPage.{h,cc}: Remove everything that has
	to do with second Y axis.
	* kchartWizardSetupAxesPage.{h,cc}: Remove everything that has to
	do with second Y axis.

	Fix part of 99997: KChart: Configuration dialog have settings for
	things that don't exist.